--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Set the viewport width to device width for mobile -->
     <meta name="viewport" content="width=device-width" />
 
-    <title>Welcome to Foundation</title>
+    <title>LastVK</title>
 
     <!-- Included CSS Files -->
     <link rel="stylesheet" href="stylesheets/app.css">
@@ -53,7 +53,7 @@
         </p>
 
         <p>
-            <a href="#" class="button">Last.fm</a>
+            <a href="#" class="button" id="lastfm-auth-button">Last.fm</a>
         </p>
     </div>
 </div>
@@ -80,8 +80,10 @@
 <script src="javascripts/foundation/jquery.placeholder.js"></script>
 
 
-<script src="http://yandex.st/jquery/1.8.2/jquery.min.js"></script>
+<script src="javascripts/jquery.min.js"></script>
 <script src="javascripts/openapi.js"></script>
+<script type="text/javascript" src="javascripts/last.fm/lastfm.api.md5.js"></script>
+<script type="text/javascript" src="javascripts/last.fm/lastfm.api.js"></script>
 <script src="javascripts/vk.js"></script>
 <script src="javascripts/last.js"></script>
 <script src="javascripts/application.js"></script>
