--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-
-<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
 <!--[if IE 8]>
 <html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!-->
@@ -8,14 +6,10 @@
 
 <head>
     <meta charset="utf-8" />
-
-    <!-- Set the viewport width to device width for mobile -->
     <meta name="viewport" content="width=device-width" />
-
     <title>LastVK</title>
-
-    <!-- Included CSS Files -->
     <link rel="stylesheet" href="stylesheets/app.css">
+    <link rel="stylesheet" href="stylesheets/lastvk.css">
 
     <script src="javascripts/foundation/modernizr.foundation.js"></script>
 
@@ -33,15 +27,12 @@
 
 <div class="row">
     <div class="eight columns">
-        <h3>Authorize on sites</h3>
+        <h3>Last.fm loved tracks</h3>
 
         <!-- Grid Example -->
         <div class="row">
             <div class="twelve columns">
-                <div class="panel">
-
-
-                </div>
+                <div id="tracklist" class="b-tacklist"></div>
             </div>
         </div>
     </div>
@@ -55,6 +46,19 @@
         <p>
             <a href="#" class="button" id="lastfm-auth-button">Last.fm</a>
         </p>
+    </div>
+</div>
+
+<div class="copyright">
+    <div class="row">
+        <div class="four columns">
+            <p>Sergey Lebedev &copy; 2012, <a href="http://ergeslab.ru">Ergeslab</a></p>
+        </div>
+        <div class="eight columns">
+            <ul class="inline-list right">
+                <li><a href="./">Home</a></li>
+            </ul>
+        </div>
     </div>
 </div>
 
@@ -84,6 +88,9 @@
 <script src="javascripts/openapi.js"></script>
 <script type="text/javascript" src="javascripts/last.fm/lastfm.api.md5.js"></script>
 <script type="text/javascript" src="javascripts/last.fm/lastfm.api.js"></script>
+<script src="javascripts/mustache.js"></script>
+<script src="javascripts/jquery.Storage.js"></script>
+<script src="javascripts/views.js"></script>
 <script src="javascripts/vk.js"></script>
 <script src="javascripts/last.js"></script>
 <script src="javascripts/application.js"></script>
