paging, views.js bugfix

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <div class="row">
             <div class="twelve columns">
                 <div id="tracklist" class="b-tacklist"></div>
+                <div id="paging" class="b-paging"></div>
             </div>
         </div>
     </div>
@@ -91,6 +92,7 @@
 <script src="javascripts/mustache.js"></script>
 <script src="javascripts/jquery.Storage.js"></script>
 <script src="javascripts/views.js"></script>
+<script src="javascripts/paging.js"></script>
 <script src="javascripts/vk.js"></script>
 <script src="javascripts/last.js"></script>
 <script src="javascripts/application.js"></script>
