add last.fm lib

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 
 <script src="javascripts/jquery.min.js"></script>
 <script src="javascripts/openapi.js"></script>
-<script type="text/javascript" src="javascripts/last.fm/lastfm.api.md5.js"></script>
-<script type="text/javascript" src="javascripts/last.fm/lastfm.api.js"></script>
+<script type="text/javascript" src="javascripts/lastfm/lastfm.api.md5.js"></script>
+<script type="text/javascript" src="javascripts/lastfm/lastfm.api.js"></script>
 <script src="javascripts/mustache.js"></script>
 <script src="javascripts/jquery.Storage.js"></script>
 <script src="javascripts/views.js"></script>
