--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 <script type="text/javascript" src="javascripts/lastfm/lastfm.api.js"></script>
 <script src="javascripts/mustache.js"></script>
 <script src="javascripts/jquery.Storage.js"></script>
+<script src="javascripts/noty_allinone.js"></script>
 <script src="javascripts/views.js"></script>
 <script src="javascripts/paging.js"></script>
 <script src="javascripts/vk.js"></script>
