Снятие чекбокса у треков, которые уже добавлены в VK. Треки с VK запрашиваем до полной инициализации приложения

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
         <!-- Grid Example -->
         <div class="row">
             <div class="twelve columns">
+                <div class="b-paging x-paging"></div>
                 <div id="tracklist" class="b-tacklist"></div>
-                <div id="paging" class="b-paging"></div>
+                <div class="b-paging x-paging"></div>
             </div>
         </div>
     </div>
