--- a/index.html
+++ b/index.html
@@ -1,103 +1,11 @@
 <!DOCTYPE html>
-<!--[if IE 8]>
-<html class="no-js lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js" lang="en"> <!--<![endif]-->
-
+<html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>LastVK</title>
-    <link rel="stylesheet" href="stylesheets/app.css">
-    <link rel="stylesheet" href="stylesheets/lastvk.css">
-
-    <script src="javascripts/foundation/modernizr.foundation.js"></script>
-
+    <meta charset="UTF-8" />
+    <title></title>
+    <meta refresh="0;http://maandse.ru">
 </head>
-<body id="lastvk">
-
-<div class="row">
-    <div class="twelve columns">
-        <h2>Last.fm to VK.com</h2>
-
-        <p>Import your favorite music from Last.fm to VK.com</p>
-        <hr />
-    </div>
-</div>
-
-<div class="row">
-    <div class="eight columns">
-        <h3>Last.fm loved tracks</h3>
-
-        <!-- Grid Example -->
-        <div class="row">
-            <div class="twelve columns">
-                <div class="b-paging x-paging"></div>
-                <div id="tracklist" class="b-tacklist"></div>
-                <div class="b-paging x-paging"></div>
-            </div>
-        </div>
-    </div>
-
-    <div class="four columns">
-        <h4>Authorization</h4>
-        <p>
-            <a href="#" class="button" id="vk-auth-button">VK.com</a>
-        </p>
-
-        <p>
-            <a href="#" class="button" id="lastfm-auth-button">Last.fm</a>
-        </p>
-    </div>
-</div>
-
-<div class="copyright">
-    <div class="row">
-        <div class="four columns">
-            <p>Sergey Lebedev &copy; 2012, <a href="http://ergeslab.ru">Ergeslab</a></p>
-        </div>
-        <div class="eight columns">
-            <ul class="inline-list right">
-                <li><a href="./">Home</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
-
-
-
-<script src="javascripts/foundation/jquery.js"></script>
-<script src="javascripts/foundation/jquery.cookie.js"></script>
-<script src="javascripts/foundation/jquery.event.move.js"></script>
-<script src="javascripts/foundation/jquery.event.swipe.js"></script>
-<script src="javascripts/foundation/jquery.foundation.accordion.js"></script>
-<script src="javascripts/foundation/jquery.foundation.alerts.js"></script>
-<script src="javascripts/foundation/jquery.foundation.buttons.js"></script>
-<script src="javascripts/foundation/jquery.foundation.clearing.js"></script>
-<script src="javascripts/foundation/jquery.foundation.forms.js"></script>
-<script src="javascripts/foundation/jquery.foundation.joyride.js"></script>
-<script src="javascripts/foundation/jquery.foundation.magellan.js"></script>
-<script src="javascripts/foundation/jquery.foundation.mediaQueryToggle.js"></script>
-<script src="javascripts/foundation/jquery.foundation.navigation.js"></script>
-<script src="javascripts/foundation/jquery.foundation.orbit.js"></script>
-<script src="javascripts/foundation/jquery.foundation.reveal.js"></script>
-<script src="javascripts/foundation/jquery.foundation.tabs.js"></script>
-<script src="javascripts/foundation/jquery.foundation.tooltips.js"></script>
-<script src="javascripts/foundation/jquery.foundation.topbar.js"></script>
-<script src="javascripts/foundation/jquery.placeholder.js"></script>
-
-
-<script src="javascripts/jquery.min.js"></script>
-<script src="javascripts/openapi.js"></script>
-<script type="text/javascript" src="javascripts/lastfm/lastfm.api.md5.js"></script>
-<script type="text/javascript" src="javascripts/lastfm/lastfm.api.js"></script>
-<script src="javascripts/mustache.js"></script>
-<script src="javascripts/jquery.Storage.js"></script>
-<script src="javascripts/noty_allinone.js"></script>
-<script src="javascripts/views.js"></script>
-<script src="javascripts/paging.js"></script>
-<script src="javascripts/vk.js"></script>
-<script src="javascripts/last.js"></script>
-<script src="javascripts/application.js"></script>
+<body>
+<a href="http://maandse.ru">MaAndSe.ru</a>
 </body>
 </html>
