--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title></title>
-    <meta refresh="0;http://maandse.ru">
+    <title>MaAndSe</title>
+    <meta refresh="1;http://maandse.ru">
+    <script type="text/javascript">
+        window.location.href = 'http://maandse.ru';
+    </script>
 </head>
 <body>
 <a href="http://maandse.ru">MaAndSe.ru</a>
