left to transform

--- a/tss/3squares.html
+++ b/tss/3squares.html
@@ -21,7 +21,7 @@
             content: "";
             display: inline-block;
             height: 100px;
-            left: 100px;
+            transform: translate(100%);
             position: absolute;
             width: 100px;
         }
@@ -30,7 +30,7 @@
             content: "";
             display: inline-block;
             height: 100px;
-            left: 200px;
+            transform: translate(200%);
             position: absolute;
             width: 100px;
         }
